--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EarlGrey",
+  "name": "earlgreta",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,6 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lagrangedot/EarlGrey"
+    "url": "https://github.com/lagrangedot/earlgreta"
   }
 }
